tests/negative/gold/interface5_test.gold
tests/negative/interface5_test.toit:5:20: error: Not an interface
class B implements A:
                   ^
Compilation failed.
